[gd_scene load_steps=4 format=2]

[ext_resource path="res://PopupDialog.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -33.0
margin_right = 68.5
margin_bottom = 33.0

[node name="Label" type="RichTextLabel" parent="PopupDialog/VBoxContainer"]
margin_right = 137.0
margin_bottom = 36.0
theme = ExtResource( 3 )
text = "Podaj liczbę kategorii"
fit_content_height = true

[node name="LineEdit" type="SpinBox" parent="PopupDialog/VBoxContainer"]
margin_top = 40.0
margin_right = 137.0
margin_bottom = 64.0
min_value = 2.0
max_value = 20.0
value = 2.0

[node name="Button" type="Button" parent="PopupDialog/VBoxContainer"]
margin_top = 68.0
margin_right = 137.0
margin_bottom = 88.0
text = "OK"

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Macierz Pomyłek" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="VBoxContainer" parent="TabContainer/Macierz Pomyłek"]
margin_right = 1016.0
margin_bottom = 561.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Macierz Pomyłek/HBoxContainer"]
margin_right = 1016.0
margin_bottom = 17.0

[node name="Label2" type="Label" parent="TabContainer/Macierz Pomyłek/HBoxContainer/CenterContainer"]
margin_left = 424.0
margin_right = 592.0
margin_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Wartości przewidywane"
align = 1

[node name="Label" type="Label" parent="TabContainer/Macierz Pomyłek/HBoxContainer"]
margin_top = 21.0
margin_right = 1016.0
margin_bottom = 38.0
text = "  "

[node name="VBoxContainer" type="HBoxContainer" parent="TabContainer/Macierz Pomyłek/HBoxContainer"]
margin_top = 42.0
margin_right = 1016.0
margin_bottom = 561.0
size_flags_horizontal = 7
size_flags_vertical = 15

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Macierz Pomyłek/HBoxContainer/VBoxContainer"]
margin_right = 1.0
margin_bottom = 519.0

[node name="Label" type="Label" parent="TabContainer/Macierz Pomyłek/HBoxContainer/VBoxContainer/CenterContainer"]
margin_top = 41.0
margin_right = 1.0
margin_bottom = 478.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 5
theme = ExtResource( 3 )
text = "Wartości rzeczywiste
"
autowrap = true

[node name="Label" type="Label" parent="TabContainer/Macierz Pomyłek/HBoxContainer/VBoxContainer"]
margin_left = 5.0
margin_top = 251.0
margin_right = 21.0
margin_bottom = 268.0
text = "  "

[node name="Grid" type="GridContainer" parent="TabContainer/Macierz Pomyłek/HBoxContainer/VBoxContainer"]
margin_left = 520.0
margin_top = 259.0
margin_right = 520.0
margin_bottom = 259.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="TabContainer/Macierz Pomyłek/HBoxContainer/VBoxContainer/Grid"]

[node name="Wskaźniki" type="ScrollContainer" parent="TabContainer"]
visible = false

[node name="VBoxContainer" type="VSplitContainer" parent="TabContainer/Wskaźniki"]
margin_right = 228.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 66
dragger_visibility = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Wskaźniki/VBoxContainer"]
margin_right = 228.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Wskaźniki/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 20.0
text = "Ogólna Trafność: "

[node name="val" type="Label" parent="TabContainer/Wskaźniki/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_top = 3.0
margin_right = 164.0
margin_bottom = 20.0
text = "NAN"

[node name="Button" type="Button" parent="TabContainer/Wskaźniki/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 228.0
margin_bottom = 23.0
text = "Oblicz"

[node name="TabContainer" type="TabContainer" parent="TabContainer/Wskaźniki/VBoxContainer"]
margin_top = 35.0
margin_right = 228.0
margin_bottom = 74.0

[connection signal="generate_table" from="PopupDialog" to="." method="_on_PopupDialog_generate_table"]
[connection signal="value_changed" from="PopupDialog/VBoxContainer/LineEdit" to="PopupDialog" method="_on_LineEdit_value_changed"]
[connection signal="button_up" from="PopupDialog/VBoxContainer/Button" to="PopupDialog" method="_on_Button_button_up"]
[connection signal="button_up" from="TabContainer/Wskaźniki/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_button_up"]
